<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1C2541"
    android:paddingHorizontal="24dp"
    android:paddingVertical="34dp"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="127dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        app:srcCompat="@drawable/ic_icons" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/imageView"
        android:text="@string/login_title_poker"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_marginStart="24dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/imageView"
        android:text="@string/login_title_tracker"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="48dp"
        android:layout_marginRight="0dp"
        android:background="#303A506B"
        android:drawableLeft="@drawable/ic_baseline_mail_24"
        android:drawablePadding="15dp"
        android:hint="@string/login_email_hint"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        android:textColor="#ffffff"
        android:textColorHint="#80ffffff"></EditText>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="0dp"
        android:background="#303A506B"
        android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
        android:drawablePadding="15dp"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="#ffffff"
        android:textColorHint="#80ffffff"></EditText>

    <Button
        android:id="@+id/singupButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="0dp"
        android:backgroundTint="#A31621"
        android:paddingVertical="16dp"
        android:text="@string/login_action"></Button>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="0dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/HaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/login_no_account"
            android:textColor="#80ffffff"
            android:textColorLink="#A31621"
            android:textSize="18sp"></TextView>

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:padding="5dp"
            android:text="@string/signup_action"
            android:textColor="#A31621"
            android:textSize="18sp"></TextView>


    </LinearLayout>

</RelativeLayout>